fix horizontal scroll bug

--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -6,7 +6,7 @@
 @media screen and (min-width: 1024px) {
 
   .app-container {
-
+    max-width: 95%;
   }
 
 }
