--- a/src/Components/BigBoard.css
+++ b/src/Components/BigBoard.css
@@ -18,7 +18,6 @@
 
   .big-board {
     height: unset;
-    padding: 50px;
   }
 
 }
