--- a/src/Components/Round.css
+++ b/src/Components/Round.css
@@ -3,6 +3,7 @@
   .round {
     display: flex;
     flex-direction: row;
+    justify-content: center;
   }
 
   .round:nth-of-type(2n) {
